cluster-components/istio-config/templates/egress-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: egress-gateway
  namespace: istio-egress
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio
  listeners:
  - name: tls
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
    
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gitops.ticq.dev/ingress-type: istio
